--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         stroke-linejoin: round;
       }
     </style>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+   <script type="module">
+import * as d3 from "https://cdn.jsdelivr.net/npm/d3@7/+esm";
     <script src="https://d3js.org/topojson.v2.min.js"></script>
   </head>
   <body>
