--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         stroke-linejoin: round;
       }
     </style>
-   <script type="module">
-import * as d3 from "https://cdn.jsdelivr.net/npm/d3@7/+esm";
+  <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+  <script type="module">
     <script src="https://d3js.org/topojson.v2.min.js"></script>
   </head>
   <body>
