--- a/index.html
+++ b/index.html
@@ -1,40 +1,44 @@
+html
 <!DOCTYPE html>
-<html>
-<head>
-  <title>D3 Example</title>
-  <!-- Insert script import here -->
-  <style>
-    body {
-        font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-        font-size: 15pt;
-    }
-    h1 {
-        text-align: center;
-        font-weight: 500;
-    }
-    svg {
-        display: block;
-        margin: auto;
-    }
+<div id="container"></div>
+<script type="module">
 
-    /* Tooltip */
-    div.tooltip {
-        position: absolute;
-        visibility: hidden;
-        font-size: 60%;
-        color: #333333;
-        background-color: #e6e6e6;
-        opacity: .95;
-        padding: 5px;
-    }
-  </style>
-</head>
-<body>
-    <h1>Poverty Rates in the United States (2014)</h1>
-    <div id="map"></div>
-    <div class="tooltip"></div>
-    <script>
-    // Insert D3 code here
-    </script>
-</body>
-</html>
+import * as d3 from "https://cdn.jsdelivr.net/npm/d3@7/+esm";
+
+// Declare the chart dimensions and margins.
+const width = 640;
+const height = 400;
+const marginTop = 20;
+const marginRight = 20;
+const marginBottom = 30;
+const marginLeft = 40;
+
+// Declare the x (horizontal position) scale.
+const x = d3.scaleUtc()
+    .domain([new Date("2023-01-01"), new Date("2024-01-01")])
+    .range([marginLeft, width - marginRight]);
+
+// Declare the y (vertical position) scale.
+const y = d3.scaleLinear()
+    .domain([0, 100])
+    .range([height - marginBottom, marginTop]);
+
+// Create the SVG container.
+const svg = d3.create("svg")
+    .attr("width", width)
+    .attr("height", height);
+
+// Add the x-axis.
+svg.append("g")
+    .attr("transform", `translate(0,${height - marginBottom})`)
+    .call(d3.axisBottom(x));
+
+// Add the y-axis.
+svg.append("g")
+    .attr("transform", `translate(${marginLeft},0)`)
+    .call(d3.axisLeft(y));
+
+// Append the SVG element.
+container.append(svg.node());
+
+</script>
