--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
 <title>11 Hexbin maps - example 1</title>
 <meta charset="utf-8">
 
-<script src="//d3js.org/d3.v5.min.js"></script>
-<script src="//d3js.org/topojson.v3.min.js"></script>
-<script src="//d3js.org/d3-color.v1.min.js"></script>
-<script src="//d3js.org/d3-interpolate.v1.min.js"></script>
-<script src="//d3js.org/d3-scale-chromatic.v1.min.js"></script>
-<script src="//d3js.org/d3-hexbin.v0.2.min.js"></script>
+<script type="module">
+
+import * as d3 from "https://cdn.jsdelivr.net/npm/d3@7/+esm";
 
 <style type="text/css">
 
