--- a/index.html
+++ b/index.html
@@ -1,102 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<title>11 Hexbin maps - example 1</title>
-<meta charset="utf-8">
-
+<div id="container"></div>
 <script type="module">
 
 import * as d3 from "https://cdn.jsdelivr.net/npm/d3@7/+esm";
 
-<style type="text/css">
+// Declare the chart dimensions and margins.
+const width = 640;
+const height = 400;
+const marginTop = 20;
+const marginRight = 20;
+const marginBottom = 30;
+const marginLeft = 40;
 
-body {
-	font-family: Avenir, sans-serif;
-}
+// Declare the x (horizontal position) scale.
+const x = d3.scaleUtc()
+    .domain([new Date("2023-01-01"), new Date("2024-01-01")])
+    .range([marginLeft, width - marginRight]);
 
-#vis svg {
-	border: 1px solid #ccc;
-}
+// Declare the y (vertical position) scale.
+const y = d3.scaleLinear()
+    .domain([0, 100])
+    .range([height - marginBottom, marginTop]);
 
+// Create the SVG container.
+const svg = d3.create("svg")
+    .attr("width", width)
+    .attr("height", height);
 
-</style>
+// Add the x-axis.
+svg.append("g")
+    .attr("transform", `translate(0,${height - marginBottom})`)
+    .call(d3.axisBottom(x));
 
-</head>
+// Add the y-axis.
+svg.append("g")
+    .attr("transform", `translate(${marginLeft},0)`)
+    .call(d3.axisLeft(y));
 
-<body>
-
-<div id="vis"></div>
-
-
-<script>
-
-
-/* Globals and SVG */
-/* =============== */
-
-var projection;
-
-
-var margin = { top: 30, right: 30, bottom: 30, left: 30 },
-		width = 900 - margin.left - margin.right,
-		height = 600 - margin.top - margin.bottom;
-
-var svg = d3.select('#vis')
-	.append('svg')
-		.attr('width', width + margin.left + margin.top)
-		.attr('height', height + margin.top + margin.bottom)
-	.append('g')
-		.attr('transform', 'translate(' + margin.left + ', ' + margin.top + ')');
-
-
-
-/* Functions */
-/* ========= */
-
-function drawGeo(data) {
-
-	projection = d3.geoAlbers() // note: global
-	  .scale(1000).translate([width/2, height/2]);
-
-	var geoPath = d3.geoPath()
-		.projection(projection);
-
-	svg
-		.append('path')
-		.datum(data)
-		.attr('d', geoPath)
-		.attr('fill', '#ccc');
-
-} // drawGeo()
-
-function prepData(topo) {
-
-	var geo = topojson.feature(topo, topo.objects.us);
-
-	return geo;
-
-} // prepData()
-
-
-
-/* Load and build steps */
-/* ==================== */
-
-function ready(us) {
-
-	var us = prepData(us);
-
-	console.log(us);
-
-	drawGeo(us);
-
-
-} // ready()
-
-// Load data sources
-d3.json('data/us.json').then(ready);
-	
+// Append the SVG element.
+container.append(svg.node());
 
 </script>
-
-</html>
