--- a/index.html
+++ b/index.html
@@ -66,8 +66,11 @@ Promise.all([
 });
 
 </script>
+<head>
+<link rel="stylesheet" type="text/css" href="=style.css">
+</head>
 <body id="svg_wrapper">
 	<svg id="d3_demo"></svg>
-Hello, world
+Hello, again
 </body>
 </html>
