--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@ Promise.all([
 
 </script>
 <head>
-<link rel="stylesheet" type="text/css" href="=style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body id="svg_wrapper">
 	<svg id="d3_demo"></svg>
-Hello, again
+Hello, third
 </body>
 </html>
