--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ let g = svg.append("g");
 
 Promise.all([
 	d3.json(
-		"https://raw.githubusercontent.com/iamspruce/intro-d3/main/data/nigeria_state_boundaries.geojson"
+		"canada-csd.geojson"
 	),
 	d3.json(
 		"https://raw.githubusercontent.com/iamspruce/intro-d3/main/data/nigeria-states.json"
